# termology

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.yaml  main.rs  trace.rs  tui.rs
src/tui/: mod.rs
tests/: qs-test.mseed  test.mseed
