[package]
name = "trace-viewer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
miniseed = { git = "https://github.com/savage13/miniseed-rs.git" }
clap = {version = "~2.27.0", features = ["yaml"]}
tui = "0.15"
termion = { version = "1.5", optional = true }
rand = "0.8"
chrono = "0.4.19"
