[package]
name = "mseed-viewer"
version = "0.1.1"
edition = "2018"

[features]
default = ["termion"]

[dependencies]
miniseed = { git = "https://github.com/savage13/miniseed-rs.git" }
clap = {version = "~2.27.0", features = ["yaml"]}
tui = "0.15"
termion = { version = "1.5", optional = true }
rand = "0.8"
chrono = "0.4.19"
log = "0.4"
simplelog = "0.10.0"
