[package]
name = "termology"
authors = ["Marius Kriegerowski"]
homepage = "https://github.com/HerrMuellerluedenscheid/termology"
version = "0.1.1"
edition = "2018"
license-file = "LICENSE.txt"
keywords = ["seismology", "tui"]
categories = ["science"]
exclude = ["tests/*.mseed"]

[features]
default = ["termion"]

[dependencies]
libmseed = { git = "https://github.com/savage13/miniseed.git", branch = "main" }
clap = {version = "~2.27.0", features = ["yaml"]}
tui = "0.15"
termion = { version = "1.5", optional = true }
rand = "0.8"
chrono = "0.4.19"
log = "0.4"
simplelog = "0.10.0"

[badges]
maintenance = { status = "experimental"}
